Fix scrollbars and CSS in GroupView (#626)
* Fix group view css

* Reference sizes from a constant file

* Bring back personal view fix

* Fix linter

--- a/frontend/src/components/GroupView/MiddleBar/GroupViewMiddleBarTaskQueue.module.scss
+++ b/frontend/src/components/GroupView/MiddleBar/GroupViewMiddleBarTaskQueue.module.scss
@@ -1,10 +1,14 @@
+@import '../groupview-sizes.scss';
+
 .TaskQueue {
-  height: 60%;
+  height: $taskqueue-height;
 }
 
 .TaskQueue h2 {
   font-weight: bold;
   color: #818181;
+  height: $sidebar-header-height;
+  margin: $sidebar-header-margin 0;
 }
 
 .EmptyTaskQueue {
@@ -30,6 +34,10 @@
   cursor: pointer;
   opacity: 0.7;
 }
-.Container {
-  overflow-y: scroll;
+
+.TaskList {
+  max-height: calc(
+    #{$taskqueue-height} - #{$sidebar-header-height} - #{$sidebar-header-margin} * 2
+  );
+  overflow-y: auto;
 }
